# phd-connect

./: .gitignore  CLAUDE.md  Dockerfile  __init__.py  app.py  docker-compose.yml  main.py  pyproject.toml
agent/: __init__.py  prompts.py  supervisor.py  tools.py
data/: school_levels.py
models/: __init__.py  schemas.py
services/: __init__.py  export_service.py  search_service.py
ui/: __init__.py  components.py  styles.py
