[project]
name = "phd-connect"
version = "0.1.0"
description = "博导建联 — 博士生导师信息查询工具"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nicegui>=2.5.0",
    "langchain-deepseek>=0.1.0",
    "langchain-tavily>=0.1.0",
    "tavily-python>=0.5.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "structlog>=24.0.0",
    "reportlab>=4.0.0",
    "openpyxl>=3.1.0",
    "ddgs>=9.14.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["PhD_Connect*"]
